--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "openai",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "ai": "^2.2.36",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
-    "openai": "^3.3.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+	"name": "openai",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node src/server.js",
+		"dev": "nodemon src/server.js",
+		"test": "jest"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"ai": "^2.2.36",
+		"chai": "^5.1.0",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"node-fetch": "^3.3.2",
+		"openai": "^3.3.0",
+		"sinon": "^17.0.1"
+	},
+	"jest": {
+		"testEnvironment": "node",
+		"testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.js$"
+	},
+	"devDependencies": {
+		"fetch-mock": "^9.11.0",
+		"jest": "^29.7.0",
+		"nodemon": "^2.0.20"
+	}
 }
